# kiss-srt

./: Cargo.toml  README.md  deny.toml
benches/: parse.rs
examples/: README.md  example.srt  parse.rs  srt.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_render_roundtrip.rs
src/: error.rs  lib.rs  parse.rs  render.rs  time.rs
tests/: errors.rs  fuzzer_crashes.rs  parsing.rs  regression.rs  stub.rs
tests/integration_tests/: errors.rs  fuzzer_crashes.rs  mod.rs  parsing.rs  time.rs
tests/integration_tests/snapshots/: main__integration_tests__errors__bad_id.snap  main__integration_tests__errors__invalid_ts_digit.snap  main__integration_tests__errors__invalid_ts_divider.snap  main__integration_tests__errors__ts_out_of_bounds.snap  main__integration_tests__parsing__empty_text_section.snap  main__integration_tests__parsing__mutations-2.snap  main__integration_tests__parsing__mutations-3.snap  main__integration_tests__parsing__mutations.snap  main__integration_tests__parsing__sanity.snap  stub__integration_tests__errors__missing_ts_line.snap  stub__integration_tests__errors__ts_end_before_start.snap  stub__integration_tests__parsing__mutations-4.snap  (+1 more)
tests/snapshots/: errors__bad_id.snap  errors__bad_start_ts.snap  errors__invalid_ts_digit.snap  errors__invalid_ts_divider.snap  errors__missing_ts_line.snap  errors__ts_end_before_start.snap  errors__ts_out_of_bounds.snap  parsing__empty_text_section.snap  parsing__mutations-2.snap  parsing__mutations-3.snap  parsing__mutations-4.snap  parsing__mutations.snap  parsing__sanity.snap
