[package]
name = "kiss-srt"
version = "0.1.0"
edition = "2018"
# TODO: check off this in CI
rust-version = "1.38.0"

# TODO: license, keywords, desc, etc.

[dependencies]

[dev-dependencies]
criterion = "0.3"
insta = "1.17"
oorandom = "11.1.3"

[lib]
bench = false

[[bench]]
name = "parse"
harness = false
